--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,6 @@ header > h1 {
 .card-functions{
   justify-content: space-around;
   display: inline-flex;
-  
 }
 
 button{
@@ -35,6 +34,7 @@ button{
   color: white;
   font-size: 15px;
 }
+
 #card-search{
   background: #12034F;
   padding: 10px;
@@ -55,7 +55,8 @@ button{
 .flex-container{
   display: flex;
   flex-direction: row-reverse;
-  margin-top: 300px;
+  margin-top: 200px;
+  align-items: flex-start;
 }
 
 .flex-child{
@@ -71,5 +72,15 @@ button{
 
 #card-image{
   padding: 50px;
- 
+}
+
+.img-rev{
+  transform: scaleY(-1);
+  -moz-transform: scaleY(-1);
+  -o-transform: scaleY(-1);
+  -webkit-transform: scaleY(-1); 
+}
+
+.img-norm{
+  
 }
