--- a/assets/style.css
+++ b/assets/style.css
@@ -131,7 +131,7 @@ h4{
 
 
 /* media query for iPhone () */
-@media (max-width: 400px){
+@media (max-width: 500px){
   body{
     background-color: pink;
   }
@@ -187,12 +187,34 @@ h4{
     height: auto;
     transform: scale(0.7);
 }
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+  
+}
 #card-data{
   /* display: flex;
   flex-direction: column;
   font-weight: 600; */
-  font-size: 20px;
+  /* font-size: 24px;
+  line-height: 25px; */
+  padding: 10px;
   margin: 10px;
+}
+h2{
+  font-size: 30px;
+  margin: 5px;
+}
+h3{
+  font-size: 15px;
+  margin: 5px 0px 10px 0px;
+}
+h4{
+  font-size: 15px;
+  /* font-style: italic; */
+  margin: 5px 0px 10px 0px;
 }
 }
 
