--- a/assets/style.css
+++ b/assets/style.css
@@ -98,10 +98,11 @@ hr{
 }
 
 .img-rev{
-  transform: scaleY(-1);
-  -moz-transform: scaleY(-1);
+  transform: rotateX(180deg);
+  /* transform: scaleY(-1); */
+  /* -moz-transform: scaleY(-1);
   -o-transform: scaleY(-1);
-  -webkit-transform: scaleY(-1); 
+  -webkit-transform: scaleY(-1);  */
 }
 
 .img-norm{
