--- a/assets/style.css
+++ b/assets/style.css
@@ -98,6 +98,8 @@ hr{
 }
 
 .img-rev{
+  /* transform: scaleX(-1); */
+  /* transform: scaleY(-1); */
   transform: rotateX(180deg);
   /* transform: scaleY(-1); */
   /* -moz-transform: scaleY(-1);
