--- a/assets/style.css
+++ b/assets/style.css
@@ -63,39 +63,49 @@ hr{
 
 .flex-container{
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column-reverse;
   margin-top: 200px;
   align-items: flex-start;
   z-index: -1;
   /* width: 100%; */
 }
-
-/* .item{
-  display: flex;
-  flex: 0 32%;
-  height: 100px;
-  margin-bottom: 2%;
-} */
-
-.data-container{
-  display: flex;
-  flex-direction: row;
+.one-card-display{
+  flex-direction: row-reverse;
 }
-#card-data{
+
+.single-card-div{
   display: flex;
   flex-direction: column;
+  /* width: 29%; */
+}
+
+.one-third-width{
+  width: 29%;
+}
+
+#card-data{
+  display: flex;
+  flex-direction: row;
   font-weight: 600;
   font-size: 24px;
   line-height: 25px;
   padding: 40px;
   margin: 10px;
+  justify-content: space-between;
+}
+
+.single-image-div{
+  display: flex;
+  width: 29%;
 }
 
 #card-image{
   display: flex;
   padding: 30px;
   max-width: 100%;
+  width: 100%;
   height: auto;
+  justify-content: space-between;
 }
 
 img{
@@ -106,6 +116,8 @@ img{
   /* transform: scaleX(-1); */
   /* transform: scaleY(-1); */
   transform: rotateX(180deg);
+  /* transform: scaleY(-1); */
+  /* transform: rotateY(180deg); */
   /* transform: scaleY(-1); */
   /* -moz-transform: scaleY(-1);
   -o-transform: scaleY(-1);
